SEGUNDA CLASE FUNCIONANDO TODO OK. -> SE CREO LOGUIN, CREACION DE USUARIOS LISTADO DE USUARIOS, OBTENCION DE UN USUARIO

--- a/.env
+++ b/.env
@@ -1,2 +1,16 @@
 #Puerto de escucha en ambiente de desarrollo
 PORT=3001
+
+#DATABASE
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=1n0v4d05
+DB_DATABASE=diplomado_db    
+DB_DIALECT=postgres
+
+# BCRYPT
+BCRYPT_SALT_ROUNDS=10
+
+#JWT  | 60*60 -> SERA 1 HORA
+JWT_SECRET=secret
+JWT_EXPIRES_SECOND=60*60
