--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,2 @@
-# Created by https://www.toptal.com/developers/gitignore/api/extjs
-# Edit at https://www.toptal.com/developers/gitignore?templates=extjs
-
-### ExtJs ###
-.architect
-bootstrap.css
-bootstrap.js
-bootstrap.json
-bootstrap.jsonp
-build/
-classic.json
-classic.jsonp
-ext/
-modern.json
-modern.jsonp
-resources/sass/.sass-cache/
-resources/.arch-internal-preview.css
-.arch-internal-preview.css
 node_modules/
-
-# End of https://www.toptal.com/developers/gitignore/api/extjs
+.env
