--- a/.env.sample
+++ b/.env.sample
@@ -2,10 +2,10 @@
 PORT=3001
 
 #DATABASE
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=diplomado_db    
+DB_HOST=dpg-cq303n4s1f4s73f6fs20-a.oregon-postgres.render.com
+DB_USER=crojas
+DB_PASSWORD=8BymnPqGlpcBk4gTdVXwWP2VMPpnrur3
+DB_DATABASE=diplomado_db_9ikd    
 DB_DIALECT=postgres
 
 # BCRYPT
